[FIX] Position and alignment of some FA icons

--- a/aa_forum/static/aa_forum/css/aa-forum.css
+++ b/aa_forum/static/aa_forum/css/aa-forum.css
@@ -244,7 +244,7 @@
     }
 
     .aa-forum .aa-forum-topic-row .aa-forum-topic .aa-forum-topic-actions {
-        width: 60px;
+        width: 67px;
     }
 
     .aa-forum .aa-forum-topic-locked {
